apps/garage/httproute-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: garage-s3
  namespace: garage
spec:
  hostnames:
    - s3.whyredfire.dev
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: garage
          port: 3900
      matches:
        - path:
            type: PathPrefix
            value: /
